Moved parser functions to HamiltonianFactory and WaveFunctionFactory and added cloning functions for multiple threads.
git-svn-id: http://qmcpack.googlecode.com/svn@854 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -24,9 +24,11 @@ SET(WFSRCS
   ../QMCWaveFunctions/ElectronGasOrbitalBuilder.cpp
   ../QMCWaveFunctions/ThreeBodyGeminal.cpp
   ../QMCWaveFunctions/ThreeBodyGeminalBuilder.cpp
+  ../QMCWaveFunctions/WaveFunctionFactory.cpp
   ../QMCHamiltonians/LocalPPotential.cpp
   ../QMCHamiltonians/NonLocalPPotential.cpp
   ../QMCHamiltonians/LocalCorePolPotential.cpp
+  ../QMCHamiltonians/HamiltonianFactory.cpp
 )
 
 IF(NOT QMCPLUSPLUS_RELEASE)
@@ -52,6 +54,7 @@ SET(QMCDRIVERS
   ../Estimators/ScalarEstimatorManager.cpp
   ../QMCDrivers/QMCOptimize.cpp
   ../QMCDrivers/QMCCostFunction.cpp
+  ../QMCDrivers/DMCPbyPOpenMP.cpp
 )
 
 IF(NOT QMCPLUSPLUS_RELEASE)
