Add DMCPbyPOpenMP to run OpenMP parallel jobs.
git-svn-id: http://qmcpack.googlecode.com/svn@893 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -54,7 +54,9 @@ SET(QMCDRIVERS
   ../Estimators/ScalarEstimatorManager.cpp
   ../QMCDrivers/QMCOptimize.cpp
   ../QMCDrivers/QMCCostFunction.cpp
+  ../QMCDrivers/DMCPbyPUpdate.cpp
   ../QMCDrivers/DMCPbyPOpenMP.cpp
+  ../QMCDrivers/DMCPbyP.cpp
 )
 
 IF(NOT QMCPLUSPLUS_RELEASE)
