Restore DMCParticleByParticle for the time being.
git-svn-id: http://qmcpack.googlecode.com/svn@897 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -24,6 +24,7 @@ SET(WFSRCS
   ../QMCWaveFunctions/ElectronGasOrbitalBuilder.cpp
   ../QMCWaveFunctions/ThreeBodyGeminal.cpp
   ../QMCWaveFunctions/ThreeBodyGeminalBuilder.cpp
+  ../QMCWaveFunctions/NEGOBuilder.cpp
   ../QMCWaveFunctions/WaveFunctionFactory.cpp
   ../QMCHamiltonians/LocalPPotential.cpp
   ../QMCHamiltonians/NonLocalPPotential.cpp
@@ -56,7 +57,6 @@ SET(QMCDRIVERS
   ../QMCDrivers/QMCCostFunction.cpp
   ../QMCDrivers/DMCPbyPUpdate.cpp
   ../QMCDrivers/DMCPbyPOpenMP.cpp
-  ../QMCDrivers/DMCPbyP.cpp
 )
 
 IF(NOT QMCPLUSPLUS_RELEASE)
