*** empty log message ***
git-svn-id: http://qmcpack.googlecode.com/svn@920 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -58,11 +58,11 @@ IF(ENABLE_OPENMP)
   SET(DMCDRIVERS ${DMCDRIVERS} ../QMCDrivers/DMC/DMCPbyPOMP.cpp)
 ENDIF(ENABLE_OPENMP) 
 
-IF(ENABLE_MPI) 
+IF(HAVE_MPI) 
   SET(DMCDRIVERS ${DMCDRIVERS} 
   ../QMCDrivers/DMC/WalkerControlMPI.cpp
   ../QMCDrivers/DMC/WalkerReconfigurationMPI.cpp)
-ENDIF(ENABLE_MPI) 
+ENDIF(HAVE_MPI) 
 
 
 SET(QMCDRIVERS 
