Use QMCDriverFactory to isolate factory functions.
git-svn-id: http://qmcpack.googlecode.com/svn@948 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -120,6 +120,7 @@ SET(MAINSRCS
   HamiltonianPool.cpp
   InitMolecularSystem.cpp
   QMCAppBase.cpp
+  QMCDriverFactory.cpp
   QMCMain.cpp
   qmcapp.cpp
 )
