--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -697,7 +697,7 @@ AC_PATH_GENERIC(xml2, 2.3.0,
   [AC_DEFINE([HAVE_LIBXML2], 1, [Define to 1 if you have libxml2])],
   [AC_MSG_ERROR([You need libxml2 version 2.3.0 or above], 1)])
 echo "return value of ac_path_generic $XML2_CFLAGS"
-CXXFLAGS="$CXXFLAGS $XML2_CFLAGS"
+CXXFLAGS="$CXXFLAGS $XML2_CFLAGS -DINLINE_ALL= "
 
 # check hdf5 library is available.
 #AC_caolan_CHECK_PACKAGE(hdf5,H5Fopen,hdf5,hdf5.h,
