--- a/trunk/src/OOMPI/Makefile.in
+++ b/trunk/src/OOMPI/Makefile.in
@@ -89,6 +89,7 @@ BLAS_LIBS = @BLAS_LIBS@
 CC = @CC@
 CPP = @CPP@
 CXX = @CXX@
+CXXCPP = @CXXCPP@
 CXXFFLAGS = @CXXFFLAGS@
 CXXFLAGS = @CXXFLAGS@
 CXX_DEBUG_FLAGS = @CXX_DEBUG_FLAGS@
@@ -97,12 +98,15 @@ CXX_OPTIMIZE_FLAGS = @CXX_OPTIMIZE_FLAGS@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
 ECHO = @ECHO@
+EGREP = @EGREP@
 F77 = @F77@
 F77_OPTIMIZE_FLAGS = @F77_OPTIMIZE_FLAGS@
 F90 = @F90@
 F90_OPTIMIZE_FLAGS = @F90_OPTIMIZE_FLAGS@
 FFLAGS = @FFLAGS@
 FLIBS = @FLIBS@
+GCJ = @GCJ@
+GCJFLAGS = @GCJFLAGS@
 HDF5_LIBS = @HDF5_LIBS@
 INCLUDES = @INCLUDES@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
@@ -119,6 +123,7 @@ OBJDUMP = @OBJDUMP@
 PACKAGE = @PACKAGE@
 QMCBASE_LIBS = @QMCBASE_LIBS@
 RANLIB = @RANLIB@
+RC = @RC@
 SPRNG_LIBS = @SPRNG_LIBS@
 STRIP = @STRIP@
 UP = @UP@
