Add compiler macro -DAPPNAMESPACE=qmcplusplus
git-svn-id: http://qmcpack.googlecode.com/svn@968 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -607,7 +607,8 @@ AC_ARG_ENABLE(openmp,
 #   fi], 
 #  [])
 
-CXXFLAGS="$CXXFLAGS $CXX_OPTIMIZE_FLAGS -DINLINE_ALL= "
+# add namesapce and INLINE_ALL
+CXXFLAGS="$CXXFLAGS $CXX_OPTIMIZE_FLAGS -DINLINE_ALL= -DAPPNAMESPACE=qmcplusplus "
 
 FFLAGS="$F77_OPTIMIZE_FLAGS $FFLAGS"
 
