Add missing library and namespace.
git-svn-id: http://qmcpack.googlecode.com/svn@969 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCTools/CMakeLists.txt
+++ b/trunk/src/QMCTools/CMakeLists.txt
@@ -36,7 +36,7 @@ ENDIF(INTEL_MKL)
 #ADD_EXECUTABLE(boostrandom random.cpp)
 #TARGET_LINK_LIBRARIES(boostrandom qmcbase)
 ADD_EXECUTABLE(convert4qmc ${CASINO})
-TARGET_LINK_LIBRARIES(convert4qmc qmc qmcbase)
+TARGET_LINK_LIBRARIES(convert4qmc qmc qmcbase qmcutil)
 #ADD_EXECUTABLE(spline spline.cpp)
 #TARGET_LINK_LIBRARIES(spline qmc qmcbase)
 #ADD_EXECUTABLE(spline3d spline3.cpp)
@@ -46,4 +46,4 @@ TARGET_LINK_LIBRARIES(convert4qmc qmc qmcbase)
 #ADD_EXECUTABLE(molinit ../QMCWaveFunctions/OrbitalBuilderBase.cpp Assign.cpp)
 #TARGET_LINK_LIBRARIES(molinit qmc qmcbase)
 ADD_EXECUTABLE(h5merge HDFWalkerMerger h5merge.cpp)
-TARGET_LINK_LIBRARIES(h5merge qmc qmcbase)
+TARGET_LINK_LIBRARIES(h5merge qmc qmcbase qmcutil)
