Fix for the libraries.
git-svn-id: http://qmcpack.googlecode.com/svn@971 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -775,7 +775,7 @@ LIBS="$XML2_LIBS $HDF5_LIBS $LAPACK_LIBS $BLAS_LIBS $SPRNG_LIBS $FLIBS $LIBS"
 
 AM_CONDITIONAL(NEEDTOBUILDOOMPI,test "$needtobuild_oompi" = "true")
 
-QMCBASE_LIBS="-L\$(top_builddir)/src -lqmcbase"
+QMCBASE_LIBS="-L\$(top_builddir)/src -lqmcbase -lqmcutil"
 
 AC_SUBST(QMCBASE_LIBS)
 
