Add QMC_COMPLEX to handle complex wavefunctions.
git-svn-id: http://qmcpack.googlecode.com/svn@980 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -9,31 +9,53 @@ SET(QMCPLUSPLUS_VERSION_PATCH 0)
 SET(QMCPLUSPLUS_RELEASE 0)
 SET(QMCPLUSPLUS_VERSION "${QMCPLUSPLUS_VERSION_MAJOR}.${QMCPLUSPLUS_VERSION_MINOR}.$(QMCPLUSPLUS_VERSION_PATH}")
 
+######################################################################
 #define the paths for library and executable for out-of-soruce compilation
+######################################################################
 SET (LIBRARY_OUTPUT_PATH ${qmcPlusPlus_BINARY_DIR}/lib CACHE PATH "Single output directory for building all libraries.")
 SET (EXECUTABLE_OUTPUT_PATH ${qmcPlusPlus_BINARY_DIR}/bin CACHE PATH "Single output directory for building all executables.")
 
 ######################################################################
-# Optinal features
-######################################################################
-
-######################
 #choose parallel mode
-######################
+######################################################################
 OPTION(QMC_MPI "Enable MPI library" OFF)
 OPTION(QMC_OMP "Enable OpenMP parallelization" OFF)
 
-######################
-#1 to build static library
-######################
-SET(QMC_BUILD_STATIC 0)
-
-######################
+######################################################################
 #set 32/64 bit OS 
-######################
+######################################################################
 SET(BITS 32)
 
+######################################################################
+#important settings for QMC simulations to instantiate template classes
+######################################################################
+#OHMMS_* is to reuse Ohmms class libraries
+#OHMMS_DIM =  dimension of the problem
+#OHMMS_INDEXTYPE = type of index
+#OHMMS_PRECISION  = base precision, float, double etc
+#OHMMS_ORTHO  = 0 for general unit cell, 1 for orthogonal cells
+#QMC_FASTWALKER  = true, when operation is faster for each walker
+#QMC_COMPLEX = true if using complex wavefunctions
+######################################################################
+SET(OHMMS_DIM 3)
+SET(OHMMS_INDEXTYPE int)
+SET(OHMMS_PRECISION double)
+SET(QMC_COMPLEX 0)
+
+######################################################################
+# FIXED PARAMETERS for test and legacy reasons
+######################################################################
+SET(QMC_FASTWALKER 1)
+SET(OHMMS_ORTHO 0)
+
+######################################################################
+#QMCAPPS  =  an application to compile
+#SET(QMCAPPS  MolecuApps)
+######################################################################
+
+######################################################################
 #list of options to determine libraries. First, try to use libraries available
+######################################################################
 SET(INTEL_COMPILER 0)
 SET(ENABLE_OPENMP 0)
 SET(HAVE_MPI 0)
@@ -44,30 +66,18 @@ SET(HAVE_LIBHDF5 0)
 SET(HAVE_LIBSPRNG 0)
 SET(HAVE_LIBBLITZ 0)
 SET(HAVE_LIBGSL 0)
-
-######################################################################
-#important settings for QMC simulations to instantiate template classes
-#OHMMS_* is to reuse Ohmms class libraries
-#OHMMS_DIM =  dimension of the problem
-#OHMMS_INDEXTYPE = type of index
-#OHMMS_PRECISION  = base precision, float, double etc
-#OHMMS_ORTHO  = 0 for general unit cell, 1 for orthogonal cells
-#QMC_FASTWALKER  = true, when operation is faster for each walker
-#QMC_APPS  =  an application to compile
-######################################################################
-SET(OHMMS_DIM 3)
-SET(OHMMS_INDEXTYPE int)
-SET(OHMMS_PRECISION double)
-SET(OHMMS_ORTHO 0)
-SET(QMC_FASTWALKER 1)
-SET(QMCAPPS  MolecuApps)
-
-######################################################################
-#experimental settings for optimization
-######################################################################
 SET(INTEL_COMPILER 0)
 
+######################
+#1 to build static library
+######################
+SET(QMC_BUILD_STATIC 0)
+
+######################################################
+# Directory where customize cmake files reside
+######################################################
 SET (PROJECT_CMAKE ${qmcPlusPlus_SOURCE_DIR}/CMake)
+
 ######################################################
 #COMPILER choose one of the cmake files to customize the compiler options
 #If nothing is chosen, default settings by cmake will  be used.
@@ -77,10 +87,11 @@ INCLUDE(${PROJECT_CMAKE}/GNUCompilers.cmake)
 #INCLUDE(${PROJECT_CMAKE}/IBMCompilers.cmake)
 #INCLUDE(${PROJECT_CMAKE}/KCCCompilers.cmake)
 #INCLUDE(${PROJECT_CMAKE}/Intel7.cmake)
- 
-INCLUDE(${CMAKE_ROOT}/Modules/FindThreads.cmake)
 
-#check external libraries: required
+######################################################
+# DO NOT MODIFY BELOW
+######################################################
+INCLUDE(${CMAKE_ROOT}/Modules/FindThreads.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindLibxml2.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindLapack.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindHDF5.cmake)
