Add capability to use complex wavefunctions.
git-svn-id: http://qmcpack.googlecode.com/svn@981 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/ohmms-config.h.cmake.in
+++ b/trunk/src/ohmms-config.h.cmake.in
@@ -62,6 +62,9 @@
 /* Define the base precision: float, double */
 #cmakedefine OHMMS_PRECISION @OHMMS_PRECISION@
 
+/* Define to 1 if complex wavefunctions are used */
+#cmakedefine QMC_COMPLEX @QMC_COMPLEX@
+
 /* Define if the code is specialized for orthorhombic supercell */
 #define OHMMS_ORTHO @OHMMS_ORTHO@
 
